Update preghpages/ghpages commands to use recent versions without vulnerabilities

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dist:min": "webpack --config webpack.prod.config.js",
     "docs": "markserv --dir docs --port 9001",
     "preghpages": "node ./scripts/preghpages.js",
-    "ghpages": "ghpages -p gh-pages/",
+    "ghpages": "gh-pages -d gh-pages",
     "lint": "standardx -v | snazzy",
     "lint:fix": "standardx --fix",
     "precommit": "npm run lint",
@@ -55,7 +55,7 @@
     "eslint": "^8.45.0",
     "eslint-config-semistandard": "^17.0.0",
     "eslint-config-standard-jsx": "^11.0.0",
-    "ghpages": "0.0.8",
+    "gh-pages": "^6.3.0",
     "git-rev": "^0.2.1",
     "glob": "^8.0.3",
     "husky": "^0.11.7",
@@ -73,9 +73,8 @@
     "karma-webpack": "^5.0.0",
     "markserv": "github:sukima/markserv#feature/fix-broken-websoketio-link",
     "mocha": "^10.0.0",
-    "replace-in-file": "^2.5.3",
+    "replace-in-file": "^8.3.0",
     "shelljs": "^0.8.5",
-    "shx": "^0.2.2",
     "sinon": "<12.0.0",
     "sinon-chai": "^3.7.0",
     "snazzy": "^5.0.0",
